# cmsc330-summer23

./: README.md
discussion/: discussion5.md  discussion6  discussion7.md  discussion8.md  discussion9.md
lecture_code/ocaml/: datatypes.txt  patterns_rec_lists.txt
lecture_code/ocaml/lp/: .ocamlinit  dune-project
lecture_code/ocaml/lp/src/: dune  lp.ml  lp.mli  lpTypes.ml
lecture_code/ocaml/lp/test/student/: dune  student.ml
lecture_code/python/: funcs.py  hw.py  typing.py
lecture_code/rust/: 6-30.txt  a.out  hw  hw.c  hw.rs  second  second.rs  vuln.c
projects/project0/: README.md
projects/project1/: README.md
projects/project2/: README.md
projects/project3/: README.md
